* Changed: New behaviour for BuddyPress Extended Profiles. Extended Profile Fields are now visible and editable on the 'Accounts Page'. * Added: CSS classes added to each xprofile field for more styling options. * Changed: Account form no longer hidden with 'edit' toggle on Accounts Page. Account form only hidden when using [accountform] shortcode. * Changed: Creating pings now better supports arrays in query strings. E.g. using merge_vars[] with MailChimp pings.
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/membership@14405 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/membershipincludes/css/accountform.css
+++ b/membershipincludes/css/accountform.css
@@ -47,13 +47,21 @@ div#message {
 	margin: 0;
 }
 
+#account-form .membership-shortcode-accountpage-toggle {
+	display: none;
+}
+
 #account-form div.formleft p {
 	font: 1em "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
 	margin-bottom: 5px;
 }
 
-#account-form div.formleft form {
-	display: none;
+.membership-shortcode-accountform #account-form div.formleft form {
+	display: none; 
+}
+
+.membership-shortcode-accountform #account-form .membership-shortcode-accountpage-toggle {
+	display: block;
 }
 
 #account-form div.formleft p span a {
